Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20230

mariabackup --ftwrl-wait-timeout never times out on explicit lock

    XMLWordPrintable

Details

    Description

      Mariabackup --ftwrl-wait-timeout only times out if FLUSH is blocked by an actual running query in another session; same for BACKUP LOGS in 10.4.

      If FLUSH is blocked by an explicit LOCK TABLES ... WRITE being active in another session though, which is otherwise idle, mariabackup will just continue waiting forever, instead of giving up after having reached the timeout ...

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5h
                  1d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.